--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-boilerplate",
+  "name": "stormy-adams-portfolio",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -30,13 +30,13 @@
     ]
   },
   "dependencies": {
-    "framer-motion": "1.8.3",
+    "framer-motion": "1.11.0",
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
-    "now": "17.0.4",
+    "now": "latest",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "styled-components": "5.0.0"
+    "react-dom": "16.13.1",
+    "styled-components": "5.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
