--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "deploy": "now",
     "lint": "eslint --fix --ext .tsx --ext .ts src",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
   "husky": {
